--- a/CMCS Web App/Views/Home/Account.cshtml
+++ b/CMCS Web App/Views/Home/Account.cshtml
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <div class="details-box">
             <h1>Account Details</h1>
-            <p>Contact a HR to make changes.</p>
+            <p>View your account details. To make changes to your personal details, please contact Human Resources.</p>
             <div class="input-box-static">
                 <input type="text" value="@Model.FirstName" readonly />
                 <label>First Name</label>
