--- a/CMCS Web App/Views/Home/ReviewClaim.cshtml
+++ b/CMCS Web App/Views/Home/ReviewClaim.cshtml
@@ -22,11 +22,11 @@
                     <tr>
                         <th>Claim ID</th>
                         <th>User ID</th>
-                        <th>Full Name</th>
+                        <th>Lecturer Name</th>
                         <th>Claim Amount</th>
                         <th>Hours Worked</th>
                         <th>Hourly Rate</th>
-                        <th>File</th>
+                        <th>Supporting Doc</th>
                         <th>Status</th>
                         <th>Review</th>
                     </tr>
