--- a/CMCS Web App/Views/Shared/_Layout.cshtml
+++ b/CMCS Web App/Views/Shared/_Layout.cshtml
@@ -17,11 +17,12 @@
         <nav class="navbar">
             <a asp-controller="Home" asp-action="Index">Home</a>
             <a asp-controller="Home" asp-action="CreateClaim">Submit Claim</a>
-            <a asp-controller="Home" asp-action="ReviewClaim">Flagged Claims</a>
-            <a asp-controller="Home" asp-action="TrackAllClaims">Track Claims</a>
-            <a asp-controller="Home" asp-action="Register">Register New Lecturer</a>
+            <a asp-controller="Home" asp-action="ReviewClaim">Flagged</a>
+            <a asp-controller="Home" asp-action="TrackClaim">Track</a>
+            <a asp-controller="Home" asp-action="Register">Register Lecturer</a>
             <a asp-controller="Home" asp-action="ViewUserClaim">Your Claims</a>
-            <a asp-controller="Home" asp-action="SummarizeClaim">Generate Report</a>
+            <a asp-controller="Home" asp-action="ProcessClaim">Process Claim</a>
+            <a asp-controller="Home" asp-action="ViewUser">Edit User</a>
             <a asp-controller="Home" asp-action="Account">Account</a>
             <a asp-controller="Home" asp-action="Login"><ion-icon name="person" size="large"></ion-icon></a>
         </nav>
