--- a/CMCS Web App/Views/Home/ProcessClaim.cshtml
+++ b/CMCS Web App/Views/Home/ProcessClaim.cshtml
@@ -1,35 +1,33 @@
 ﻿@model IEnumerable<CMCS_Web_App.Models.UserClaim>
+
 @{
-    ViewData["Title"] = "Track All Claims";
+    ViewData["Title"] = "Process Claim";
 }
 
-@if ((int)TempData["AccessLevel"] == 1)
+@if ((int)TempData["AccessLevel"] != 3)
 {
     <div class="alert alert-danger">
-        This page is for Administrators only.
+        This page is for Human Resources only.
     </div>
 }
 
-@if ((int)TempData["AccessLevel"] == 2 || (int)TempData["AccessLevel"] == 3)
+@if ((int)TempData["AccessLevel"] == 3)
 {
     <div class="page">
         <div class="wrapper">
             <div class="table">
-
-                <h1>Track All Claims</h1>
-                <p>View all requested claims below.</p>
+                <h1>Process Approved Claims</h1>
+                <p>Process the Approved claims below by generating an invoice for them, so they can be sent for payment processing.</p>
                 <table>
                     <tr>
                         <th>Claim ID</th>
                         <th>User ID</th>
-                        <th>Full Name</th>
-                        <th>Email</th>
-                        <th>Faculty</th>
+                        <th>Lecturer Name</th>
                         <th>Claim Amount</th>
                         <th>Hours Worked</th>
                         <th>Hourly Rate</th>
-                        <th>File</th>
-                        <th>Status</th>
+                        <th>Supporting Doc</th>
+                        <th>Invoice</th>
                     </tr>
 
                     @foreach (var claim in Model)
@@ -38,24 +36,21 @@
                             <td>@claim.UserClaimId</td>
                             <td>@claim.UserId</td>
                             <td>@claim.User.FirstName @claim.User.Surname</td>
-                            <td>@claim.User.Email</td>
-                            <td>@claim.User.Faculty</td>
                             <td>R @claim.ClaimAmount</td>
                             <td>@claim.HoursWorked Hrs</td>
                             <td>R @claim.HourlyRate / h</td>
                             <td><a asp-controller="Home" asp-action="DownloadFile" asp-route-id="@claim.UserClaimId">@claim.FileName</a></td>
                             <td>
-                                @if (claim.ClaimStatus == "Pending")
+                                @if (claim.PdfFileData != null)
                                 {
-                                    <span class="pending">Pending</span>
+                                    <a asp-controller="Home" asp-action="DownloadPdf" asp-route-id="@claim.UserClaimId">Download Invoice</a>
                                 }
-                                else if (claim.ClaimStatus == "Approved")
+                                @if (claim.PdfFileData == null)
                                 {
-                                    <span class="approved">Approved</span>
-                                }
-                                else
-                                {
-                                    <span class="rejected">Rejected</span>
+                                    <form asp-controller="Home" asp-action="MakePDF" method="post">
+                                        <input type="hidden" name="id" value="@claim.UserClaimId" />
+                                        <button class="btn btn-invoice" type="submit">Create Invoice</button>
+                                    </form>
                                 }
                             </td>
                         </tr>
@@ -65,4 +60,5 @@
         </div>
     </div>
 }
+
 
