--- a/CMCS Web App/Views/Home/ViewUserClaim.cshtml
+++ b/CMCS Web App/Views/Home/ViewUserClaim.cshtml
@@ -7,7 +7,7 @@
 @if ((int)TempData["AccessLevel"] != 1)
 {
     <div class="alert alert-danger">
-        This page is for lecturers to view their claims.
+        This page is for Lecturers only.
     </div>
 }
 
@@ -16,16 +16,15 @@
     <div class="page">
         <div class="wrapper">
             <div class="table">
-
                 <h1>View All Your Requested Claims</h1>
-                <p>View the list of all your claims below.</p>
+                <p>View the list of all your submitted claims below and check their current status.</p>
                 <table>
                     <tr>
                         <th>Claim ID</th>
                         <th>Claim Amount</th>
                         <th>Hours Worked</th>
                         <th>Hourly Rate</th>
-                        <th>File</th>
+                        <th>Supporting Doc</th>
                         <th>Claim Status</th>
                     </tr>
 
@@ -46,9 +45,9 @@
                                 {
                                     <span class="approved">Approved</span>
                                 }
-                                else if (claim.ClaimStatus == "PAID")
+                                else if (claim.ClaimStatus == "Awaiting Payment")
                                 {
-                                    <span class="approved">Approved</span>
+                                    <span class="approved">Awaiting Payment</span>
                                 }
                                 else
                                 {
